samples/_failures_safe/1761711935_21cd10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3722dddb.c: In function ‘main’:
./samples/SAFE/__tmp_3722dddb.c:145:5: error: expected declaration or statement at end of input
  145 |     graph_add_edge(&g, e, d, 3);
      |     ^~~~~~~~~~~~~~
